[gd_scene load_steps=2 format=3 uid="uid://bbodxh423swho"]

[ext_resource type="Script" uid="uid://cfks7jfcbfgga" path="res://scenes/test/new_map_test.gd" id="1_yjnqm"]

[node name="NewMapTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjnqm")

[node name="MapContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -300.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
grow_horizontal = 0
grow_vertical = 2

[node name="Title" type="Label" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "地图信息"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NodeInfo" type="RichTextLabel" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "选择一个节点查看信息"

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = -300.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Controls"]
layout_mode = 2

[node name="TemplateLabel" type="Label" parent="Controls/HBoxContainer"]
layout_mode = 2
text = "模板:"

[node name="TemplateOption" type="OptionButton" parent="Controls"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "标准地图"
popup/item_0/id = 0
popup/item_1/text = "困难地图"
popup/item_1/id = 1
popup/item_2/text = "简单地图"
popup/item_2/id = 2
popup/item_3/text = "冒险地图"
popup/item_3/id = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Controls"]
layout_mode = 2

[node name="SeedLabel" type="Label" parent="Controls/HBoxContainer2"]
layout_mode = 2
text = "种子:"

[node name="SeedInput" type="LineEdit" parent="Controls"]
layout_mode = 2
text = "12345"
placeholder_text = "输入种子值"

[node name="HBoxContainer3" type="HBoxContainer" parent="Controls"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="Controls/HBoxContainer3"]
layout_mode = 2
text = "难度:"

[node name="DifficultySlider" type="HSlider" parent="Controls"]
layout_mode = 2
min_value = 1.0
max_value = 3.0
value = 1.0
tick_count = 3
ticks_on_borders = true

[node name="GenerateButton" type="Button" parent="Controls"]
layout_mode = 2
text = "生成地图"
